# dune-alugrid

./: .gitlab-ci.yml  CMakeLists.txt  README.md  dune.module
cmake/modules/: CMakeLists.txt  FindPThreads.cmake  FindZOLTAN.cmake
dune/alugrid/: dgf.hh  grid.hh
dune/alugrid/3d/: alu3dinclude.hh  faceutility_imp.cc  grid_imp.cc  gridfactory.cc  gridfactory.hh  gridfactory_imp.cc  iterator_imp.cc
dune/alugrid/common/: bisectioncompatibility.hh  capabilities.hh  declaration.hh  hsfc.hh  meshquality.hh  structuredgridfactory.hh
dune/alugrid/impl/: macrofileheader.hh
dune/alugrid/impl/parallel/: gitter_pll_impl.cc  gitter_pll_mgb.cc
dune/alugrid/impl/serial/: CMakeLists.txt  gitter_geo.cc  gitter_hexa_top.cc  gitter_hexa_top.h  gitter_impl.cc  gitter_mgb.cc  gitter_mgb.h  gitter_sti.h  gitter_tetra_top.cc  gitter_tetra_top.h  refinementrules.h
dune/alugrid/test/: CMakeLists.txt  test-alugrid.cc  test-backup-restore.cc  test-dgf.cc
dune/alugrid/test/dgf/: CMakeLists.txt  simplex-testgrid-3-3.dgf
dune/python/: CMakeLists.txt
dune/python/alugrid/: CMakeLists.txt  hierarchical.hh
examples/: CMakeLists.txt  problem-transport.hh
examples/callback/: CMakeLists.txt
lib/: CMakeLists.txt
python/dune/alugrid/: CMakeLists.txt  __init__.py  _grids.py  importmesh.py
scripts/: build-zoltan-github.sh  build-zoltan.sh
